# B4M35PAG

./: README.md
5_lab_codes_skeletons/cmake/: CMakeLists.txt
5_lab_codes_skeletons/src/: HelloWorld.cpp  MonteCarloPi.cpp  VectorNormalization.cpp
6_lab_codes_skeletons/cmake/: CMakeLists.txt
6_lab_codes_skeletons/src/: FalseSharing.cpp  MergeSort.cpp  Utils.hpp  VectorNormalization.cpp
9_lab_codes_solutions/cmake/: CMakeLists.txt
9_lab_codes_solutions/src/: HelloWorld.cpp  Iddqd.cpp  Idkfa.cpp  Utils.hpp  VectorNormalization.cpp
hw_1_code_skeletons/: .gitignore
hw_1_code_skeletons/assignment/: pseudoCodeHW!1PAG
hw_1_code_skeletons/cmake/: CMakeLists.txt
hw_1_code_skeletons/src/: InstanceGenerator.cpp  LU.cpp
hw_2_code_skeletons/cmake/: CMakeLists.txt
hw_2_code_skeletons/src/: InstanceGenerator.cpp  Triangulation.cpp
hw_3_code_skeletons/cmake/: CMakeLists.txt
hw_3_code_skeletons/instances/: example.txt  large_1.txt
hw_3_code_skeletons/result/: out.ppm  out.txt  out.txtD
hw_3_code_skeletons/solutions/: example.ppm  large_1.txt
hw_3_code_skeletons/src/: HeatDiffusion.cpp
semproj_code_skeleton/cmake-c11threads/: CMakeLists.txt
semproj_code_skeleton/cmake-mpi/: CMakeLists.txt
semproj_code_skeleton/cmake-openmp/: CMakeLists.txt
semproj_code_skeleton/semproj_public_test_cases/results/: test.txt
semproj_code_skeleton/src/: InstanceGenerator.cpp  Storage.cpp  Utils.h  levenshtein-sse.hpp
